# orouter-serial

./: .gitignore  Cargo.toml  README.md  README.tpl
.github/workflows/: release_failure_template.mustache  rust.yml  telegram.yml
examples/: read.rs  write.rs
src/: codec.rs  defmt.rs  host.rs  lib.rs  message.rs  overline.rs  p2p.rs
src/host/: codec.rs  mod.rs
