[package]
name = "orouter-serial"
version = "0.1.0"
authors = ["Adam Kloboucnik <adam@klob.cz>"]
edition = "2021"
license = "MIT"

[dependencies]
base16 = { version = "0.2", default-features = false }
cobs = { version = "0.1", default-features = false }
defmt = { version = "0.3.1", optional = true }
heapless = { version = "0.7" }
rand = { version = "0.7", default-features = false, features = ["small_rng"]}

[dev-dependencies]
rand = { version = "0.7" }
serialport = "4.2.2"

[features]
default = ["std"]
defmt-impl = ["defmt", "heapless/defmt-impl"]
std = []

[[example]]
name = "read"
