[package]
name = "orouter-serial"
description = "Implementation of serial protocol for oRouter"
version = "0.1.1"
authors = ["Overline developers dev@overline.network"]
edition = "2021"
license = "MIT"
repository = "https://github.com/overliner/orouter-serial"
readme = "README.md"


[dependencies]
base16 = { version = "0.2", default-features = false }
cobs = { version = "0.1", default-features = false }
defmt = { version = "0.3.1", optional = true }
heapless = { version = "0.7" }
postcard = { version = "1.0.8", default-features = false, features = ["use-defmt"] }
rand = { version = "0.7", default-features = false, features = ["small_rng"]}
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde-big-array = "0.5.1"

[dev-dependencies]
rand = { version = "0.7" }
serialport = "4.2.2"

[features]
default = ["std"]
defmt-impl = ["defmt", "heapless/defmt-impl"]
std = []

[[example]]
name = "read"

[[example]]
name = "write"
